force-app/main/default/objects/Activity/fields/Interview_Format__c.field-meta.xml
<CustomField>
    <fullName>Interview_Format__c</fullName>
    <inlineHelpText>Use Link for video interviews and Location for onsite interviews.</inlineHelpText>
    <label>Interview Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Take-home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>