force-app/main/default/objects/Activity/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Meeting link for video interviews.</description>
    <inlineHelpText>Use this field for video interview meeting links.</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>